Sending messages overflow fix

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -122,6 +122,10 @@ body {
   width: 100%;
 }
 
+#chat-page {
+  height: 1vh;
+}
+
 .q-input, .q-select {
   * {
     color: $font !important;
@@ -251,9 +255,11 @@ body {
   height: calc(100% - 130px);
   width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  flex-direction: column-reverse;
   padding: 0 20px 14px 20px;
+  overflow-y: scroll;
+  overflow-anchor: none;
+  flex-grow: 1;
 }
 
 .chat-bubble-row {
@@ -261,7 +267,6 @@ body {
   flex-direction: column;
   width: 100%;
   height: auto;
-  overflow-y: auto;
   padding-top: 14px;
 
   .bubble {
