--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -38,6 +38,10 @@ $font-hover   : #bab9ce;
 $chat-bubble-incoming: #1F1D44;
 $chat-bubble-outgoing: linear-gradient(-80deg, #717AED, #C134F8);
 
+$scrollbar: linear-gradient(-80deg, rgba(113, 122, 237, 0.65), rgba(193, 52, 248, 0.65));
+$scrollbar-hover: linear-gradient(-80deg, rgba(113, 122, 237, 0.85), rgba(193, 52, 248, 0.85));
+
+
 $title: linear-gradient(-64deg, #00DBDE 40%, #FC00FF);
 
 
